// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-alert Render Should render a danger alert with args { closeButton: true } 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="danger">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a danger alert with args { closeButton: true, lang: 'fr' } 1`] = `
<mg-alert lang="fr">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="danger">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Fermer le message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a danger alert with args { closeButton: true, lang: 'xx' } 1`] = `
<mg-alert lang="xx">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="danger">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a danger alert with args {} 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert" role="alert">
      <mg-message variant="danger">
        <slot></slot>
        <slot name="actions"></slot>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a info alert with args { closeButton: true } 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="status">
      <mg-message variant="info">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a info alert with args { closeButton: true, lang: 'fr' } 1`] = `
<mg-alert lang="fr">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="status">
      <mg-message variant="info">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Fermer le message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a info alert with args { closeButton: true, lang: 'xx' } 1`] = `
<mg-alert lang="xx">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="status">
      <mg-message variant="info">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a info alert with args {} 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert" role="status">
      <mg-message variant="info">
        <slot></slot>
        <slot name="actions"></slot>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a success alert with args { closeButton: true } 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="success">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a success alert with args { closeButton: true, lang: 'fr' } 1`] = `
<mg-alert lang="fr">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="success">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Fermer le message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a success alert with args { closeButton: true, lang: 'xx' } 1`] = `
<mg-alert lang="xx">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="success">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a success alert with args {} 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert" role="alert">
      <mg-message variant="success">
        <slot></slot>
        <slot name="actions"></slot>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a warning alert with args { closeButton: true } 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="warning">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a warning alert with args { closeButton: true, lang: 'fr' } 1`] = `
<mg-alert lang="fr">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="warning">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Fermer le message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a warning alert with args { closeButton: true, lang: 'xx' } 1`] = `
<mg-alert lang="xx">
  <mock:shadow-root>
    <div class="mg-c-alert mg-c-alert--close-button" role="alert">
      <mg-message variant="warning">
        <slot></slot>
        <slot name="actions"></slot>
        <span class="mg-c-alert__close-button">
          <mg-button is-icon="" label="Close message" variant="flat">
            <mg-icon icon="cross"></mg-icon>
          </mg-button>
        </span>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render a warning alert with args {} 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert" role="alert">
      <mg-message variant="warning">
        <slot></slot>
        <slot name="actions"></slot>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
</mg-alert>
`;

exports[`mg-alert Render Should render with action slot 1`] = `
<mg-alert>
  <mock:shadow-root>
    <div class="mg-c-alert" role="alert">
      <mg-message>
        <slot></slot>
        <slot name="actions"></slot>
      </mg-message>
    </div>
  </mock:shadow-root>
  <p>
    <strong>
      Strong
    </strong>
    content!
  </p>
  <div class="mg-l-group-elements mg-l-group-elements--align-right" slot="actions">
    <mg-button>
      Primary
    </mg-button>
    <mg-button variant="secondary">
      Secondary
    </mg-button>
  </div>
</mg-alert>
`;
